--- a/webapp/src/app/pacman-features/modules/admin/policies/policies.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/policies/policies.component.html
@@ -24,14 +24,14 @@
             <ul>
                 <li class="widget-wrapper relative">
                     <div class="relative">
-                        <app-table style="height: 100%; width: 100%;" (rowSelectEventEmitter)="goToDetails($event)" (selectedAction)="goToDetails($event)"
+                        <app-table style="height: 100%; width: 100%;" (rowSelectEventEmitter)="handleRowClick($event)" (actionSelected)="goToDetails($event)"
                             [data]="tableData" [columnWidths]="columnWidths" (headerColNameSelected)="handleHeaderColNameSelection($event)" 
                             [headerColName]="headerColName" [direction]="direction" [whiteListColumns]="whiteListColumns"
                             (searchCalledEventEmitter)="callNewSearch($event)"
                             [searchQuery]="searchTxt" [tableErrorMessage]='errorMessage'
                             [showSearchBar]="true" [showAddRemoveCol]="true" [showFilterBtn]="true" [onScrollDataLoader]="onScrollDataLoader" [totalRows]="totalRows"
                             [tableScrollTop]="tableScrollTop" [tableDataLoaded]="tableDataLoaded" [columnsSortFunctionMap]="columnsSortFunctionMap"
-                            [rowClickable]="false" [doLocalFilter]="true" [doLocalSearch]="true"
+                            [rowClickable]="true" [doLocalFilter]="true" [doLocalSearch]="false"
                             [filterTypeLabels]="filterTypeLabels" [filterTagLabels]="filterTagLabels" [filteredArray]="filters">
                         </app-table>
                         <div class="data-table-desc">{{dataTableDesc}}</div>
