feat: rowSize aligned with font-size css param feat: added centeredColumns param

--- a/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.html
@@ -62,6 +62,7 @@
                     (rowSelectEventEmitter)="goToDetails($event)"
                     [data]="complianceTableData"
                     [columnWidths]="columnWidths"
+                    [centeredColumns]="centeredColumns"
                     [tableErrorMessage]="tableErrorMessage"
                     [tableDataLoaded]="tableDataLoaded"
                     [columnsSortFunctionMap]="columnsSortFunctionMap"
