--- a/webapp/src/app/pacman-features/modules/compliance/violations-card/violations-card.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/violations-card/violations-card.component.html
@@ -1,22 +1,29 @@
-<div class="violations-card">
-  <div class="violations-card-wrapper flex flex-col">
+<div class="violations-card flex flex-col">
     <div class="violations-content-container flex flex-row">
-      <div class="violations-img">
-        <img src="/assets/icons/violations-{{card.name}}.svg" alt="" >
-      </div>
-      <div class="violations-content flex flex-col">
-        <div class="violations-title capitalize nowrap-ellipsis">{{card.name}} Violations</div>
-        <div class="violations-count" (click)="redirect()">{{card.totalViolations}} <img src="/assets/icons/Path.svg" /></div>
-      </div>
-    </div>
-    <hr width="100%" style="color: var(--border-200);">
-    <div class="violations-info-container">
-      <div class="violations-info-wrapper flex flex-row">
-        <div class="{{item}}-count flex flex-col violations-info" *ngFor="let item of getKeys(card.subInfo)">
-          <div class="name nowrap-ellipsis">{{ item }}</div>
-          <div class="count">{{ card.subInfo[item] }}</div>
+        <div class="violations-img">
+            <img
+                src="/assets/icons/violations-{{ card.name }}.svg"
+                [alt]="card.name + ' violation icon'"
+            />
         </div>
-      </div>
+        <div class="violations-content flex flex-col">
+            <div class="violations-title capitalize nowrap-ellipsis">
+                {{ card.name }} Violations
+            </div>
+            <div class="violations-count" (click)="redirect()">
+                {{ card.totalViolations }}
+                <img src="/assets/icons/Path.svg" alt="go to violation" />
+            </div>
+        </div>
     </div>
-  </div>
+    <hr class="violations-card-divider" width="100%" />
+    <div class="violations-info-container flex flex-row">
+        <div
+            class="{{ item }}-count flex flex-col violations-info-item"
+            *ngFor="let item of getKeys(card.subInfo)"
+        >
+            <div class="name nowrap-ellipsis">{{ item }}</div>
+            <div class="count">{{ card.subInfo[item] }}</div>
+        </div>
+    </div>
 </div>
